--- a/android/common/src/main/res/values/colors.xml
+++ b/android/common/src/main/res/values/colors.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/blueLight</color>
-    <color name="colorPrimaryDark">@color/blueDark</color>
-    <color name="colorAccent">@color/orange</color>
-    <color name="greyFrame">@color/greyBg</color>
+    <color name="colorPrimary">@color/blue_light</color>
+    <color name="colorPrimaryDark">@color/blue_dark</color>
+    <color name="colorAccent">@android:color/holo_purple</color>
 
-    <color name="orange">#f47421</color>
-    <color name="blueDark">#137cb9</color>
-    <color name="blueLight">#61bbe9</color>
-    <color name="blueBg">#e7ecef</color>
-    <color name="greyBg">#6e8497</color>
+    <color name="white">@android:color/white</color>
+    <color name="purple">@android:color/holo_purple</color>
+    <color name="blue_dark">@android:color/holo_blue_dark</color>
+    <color name="blue_light">@android:color/holo_blue_light</color>
+    <color name="grey_light">@android:color/holo_gray_light</color>
+    <color name="grey_dark">#808080</color>
 </resources>
